Se corrige la vista para Soldador Certificación

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadSoldadorCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadSoldadorCertificacion.cshtml
@@ -7,10 +7,10 @@
 
 @section breadcrumb {
     <li>
-        <a href="@Url.Action("landing", "Home")"><span id="lblInicio"></span></a>
+        <a href="@Url.Action("landing", "Home")">Catálogos</a>
     </li>
     <li>
-        <a href="#">Soldadura</a>
+        <a href="#">Soldador Certificación</a>
     </li>
     <li class="active">
         <a href="@Url.Action("listadsoldadorcertificacion", "soldadorcertificacion")"><span id="SoldadoCertificacion"></span></a>
@@ -53,10 +53,10 @@
 @Scripts.Render("~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Lista/Seguridad.js")
 
 
-<script src="~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Lista/SoldadorCertificacion.js"></script>
-<script src="~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Lista/Ajax.js"></script>
-<script src="~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Lista/Handlers.js"></script>
-<script src="~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Lista/Seguridad.js"></script>
+<script src="~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/SoldadorCertificacion.js"></script>
+<script src="~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Ajax.js"></script>
+<script src="~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Handlers.js"></script>
+<script src="~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Seguridad.js"></script>
 
 <script type="text/javascript">
     @section JavascriptDocumentReadyFunctions {
