Modificaciones al modulo de WPS

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
@@ -54,7 +54,7 @@
     @*GRID*@
     <div class="row addedSectionInLine">
         <div class="button-section col-sm-12 col-md-2 col-lg-2">
-            <button id="AgregarWPS" type="button" class="btn btn-newArrival btn-yellow"><span id="DashboardAvisoLlegada0003"></span></button>
+            <button id="AgregarWPS" type="button" class="btn btn-newArrival btn-yellow"><span id="WPSButtonNuevoWPS"></span></button>
         </div>
         <div id="ContenedorGrid" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div id="grid" data-role="grid" class="k-grid k-widget">
@@ -106,6 +106,7 @@
 
 <script src="~/Scripts/AppComponents/WPS/Listado/Ajax.js"></script>
 <script src="~/Scripts/AppComponents/WPS/Listado/Handlers.js"></script>
+<script src="~/Scripts/AppComponents/WPS/Listado/Render.js"></script>
 <script src="~/Scripts/AppComponents/WPS/Listado/WPS.js"></script>
 
 
