--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/_PopUPWPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/_PopUPWPS.cshtml
@@ -63,9 +63,9 @@
 
 
         <div id="divPQRRelleno" >
-            <a id="GuardarWPS" href="#" class="btn btn-blue col-xs-5 col-sm-5 col-md-5 col-lg-5 form-group"><span id="botonGuardar"></span></a>
+            <a id="GuardarWPS" href="#" class="btn btn-blue col-xs-5 col-sm-5 col-md-5 col-lg-5 form-group"><span id="botonGuardar3"></span></a>
             
-            <a id="CancelarWPS" href="#" class="btn btn-blue col-xs-5 col-sm-5 col-md-5 col-lg-5 form-group"><span id="botonCancelar"></span></a>
+            <a id="CancelarWPS" href="#" class="btn btn-blue col-xs-5 col-sm-5 col-md-5 col-lg-5 form-group"><span id="botonCancelar2"></span></a>
         </div>
 
     </div>
