--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadSoldadorCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadSoldadorCertificacion.cshtml
@@ -20,32 +20,50 @@
 <div class="form clearfix col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                    <div class="formNav filtersFields clearfix">
-                        <div class="row">
-                            <div class="col-sm-12 col-md-2 col-lg-2">
-                                <div class="button-section">
-                                    <button id="AgregarSoldadorCertificacion" type="button" class="btn btn-newArrival btn-yellow"><span id="botonAgregar"></span></button>
-                                </div>
-                            </div>
-                        </div>
+            <div class="formNav clearfix">
+                <div class="button-section editButtonSection">
+                    <div class="btn-group save-group">
+                        <button id="Guardar" onclick="javascript:void(0);" type="button" class="btn btn-yellow"><span id="botonGuardar"></span></button>
+                        <button id="Editar" onclick="javascript:void(0);" type="button" class="btn btn-yellow" style="display:none"><span id="botonEdtar"></span></button>
+                        <button id="dropdown-toggle" type="button" class="btn btn-yellow dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="caretWhite"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" id="btnGuardar"><span id="botonGuardar2"></span></a></li>
+                            <li><a href="#" id="btnGuardarYNuevo"><span id="botonGuardarYNuevo"></span></a></li>
+                        </ul>
+                    </div>
+                    <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
+                </div>
+                <div id="ArmadoSoldaduraDivSuperior" class="button-section">
+                    <a id="ArmadoSoldaduraSuperior" href="@Url.Action("capturaSoldadura","Soldadura")" class="btn btn-primary"><span id="menuSoldadur"></span></a>
+                </div>
+                <div class="button-section actionButtonSection">
+                    <div class="dropdown action-group">
+                        <a id="Acciones" data-target="#" href="#" data-toggle="dropdown" role="button" ariahaspopup="true" aria-expanded="false" class="btn btn-default">
+                            <span id="botonAcciones1"></span>
+                            <span class="caretBlue"></span>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="Acciones"></ul>
                     </div>
                 </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div id="ContenedorGrid" class="row">
-                        <div id="grid" data-role="grid" class="k-grid k-widget">
-                        </div>
-                    </div>
-                </div>
+                <a id="Imprimir" href="#" class="btn btn-fadeBlue actionButtonSection"></a>
             </div>
         </div>
-
     </div>
-    @*<div id="windowSoldadorCertificacion" style="display:none; z-index:inherit">
-        @Html.Partial("~/Views/SoldadorCertificacionPopUp/_SoldadorCertificacion.cshtml")
-    </div>*@
+
+    <div class="row addedSectionInLine">
+        <div class="button-section col-sm-12 col-md-2 col-lg-2">
+            <button id="AAgregarPQR" type="button" class="btn btn-newArrival btn-yellow"><span id="DashboardAvisoLlegada0003"></span></button>
+        </div>
+        <div id="ContenedorGrid" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div id="grid" data-role="grid" class="k-grid k-widget">
+            </div>
+        </div>
+    </div>
+    <div id="windowSoldadorCertificacion" style="display:none; z-index:inherit"
+        @Html.Partial("~/Views/SoldadorCertificacion/_SoldadorCertificacion.cshtml")
+    </div>
 </div>
 @Scripts.Render("~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Lista/SoldadorCertificacion.js")
 @Scripts.Render("~/Scripts/AppComponents/Catalogos/SoldadorCertificacion/Lista/Ajax.js")
