--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
@@ -18,16 +18,55 @@
 }
 
 <div class="form clearfix col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <div class="row ">
-        <div class="row">
-            <div class="col-sm-11 col-md-11 col-lg-11">
-                <div class="button-section">
-                    <button id="AAgregarPQR" type="button" class="btn btn-newArrival btn-yellow"><span id="botonAgregar"></span></button>
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="formNav clearfix">
+                <div class="button-section editButtonSection">
+                    <div class="btn-group save-group">
+                        <button id="Guardar" onclick="javascript:void(0);" type="button" class="btn btn-yellow"><span id="botonGuardar"></span></button>
+                        <button id="Editar" onclick="javascript:void(0);" type="button" class="btn btn-yellow" style="display:none"><span id="botonEdtar"></span></button>
+                        <button id="dropdown-toggle" type="button" class="btn btn-yellow dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="caretWhite"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" id="btnGuardar"><span id="botonGuardar2"></span></a></li>
+                            <li><a href="#" id="btnGuardarYNuevo"><span id="botonGuardarYNuevo"></span></a></li>
+                        </ul>
+                    </div>
+                    <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
                 </div>
+                <div id="ArmadoSoldaduraDivSuperior" class="button-section">
+                    <a id="ArmadoSoldaduraSuperior" href="@Url.Action("capturaSoldadura","Soldadura")" class="btn btn-primary"><span id="menuSoldadur"></span></a>
+                </div>
+                <div class="button-section actionButtonSection">
+                    <div class="dropdown action-group">
+                        <a id="Acciones" data-target="#" href="#" data-toggle="dropdown" role="button" ariahaspopup="true" aria-expanded="false" class="btn btn-default">
+                            <span id="botonAcciones1"></span>
+                            <span class="caretBlue"></span>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="Acciones"></ul>
+                    </div>
+                </div>
+                <a id="Imprimir" href="#" class="btn btn-fadeBlue actionButtonSection"></a>
             </div>
         </div>
     </div>
-    <div class="col-sm-11 col-md-11 col-lg-11">
+
+    <div class="row addedSectionInLine">
+        <div class="button-section col-sm-12 col-md-2 col-lg-2">
+            <button id="AAgregarPQR" type="button" class="btn btn-newArrival btn-yellow"><span id="DashboardAvisoLlegada0003"></span></button>
+        </div>
+        <div id="ContenedorGridPopUp" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div id="grid" data-role="grid" class="k-grid k-widget">
+            </div>
+        </div>
+    </div>
+
+    @*<div id="windowPQR" style="display: none; z-index:inherit;">
+        @Html.Partial("~/Views/EditaPQR/_EditaPQR.cshtml")
+    </div>*@
+
+    @*<div class="col-sm-11 col-md-11 col-lg-11">
         <div class="row">
             <div class="form-group">
                 <div id="ContenedorGridPopUp">
@@ -36,25 +75,26 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 </div>
 
-<div id="windowPQR" style="display: none; z-index:inherit;">
+@*<div id="windowPQR" style="display: none; z-index:inherit;">
     @Html.Partial("~/Views/EditaPQR/_EditaPQR.cshtml")
-</div>
+</div>*@
 
 
 
 <script src="~/Scripts/AppComponents/Catalogos/PQR/Ajax.js"></script>
 <script src="~/Scripts/AppComponents/Catalogos/PQR/Handlers.js"></script>
 <script src="~/Scripts/AppComponents/Catalogos/PQR/PQR.js"></script>
+<script src="~/Scripts/AppComponents/Catalogos/PQR/Render.js"></script>
 
 
 
 
 @*@section JavascriptDocumentReadyFunctions {
-    //$authorizationModel["Edita PQR"] = $PqrSaveModel;
-    }*@
+    $authorizationModel["Edita PQR"] = $PqrSaveModel;
+}*@
 
 
 
