Se agrega el proyecto al modulo de WPS

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/Shared/_Layout.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
     @Scripts.Render("~/Scripts/AppComponents/Core/SecurityManager.js")
     @Scripts.Render("~/Scripts/AppComponents/Core/TranslationManager.js")
     @Scripts.Render("~/Scripts/AppComponents/Core/UtilitiesManager.js")
+    @Scripts.Render("~/Scripts/Confirm/jquery.confirm.js")
+    @Scripts.Render("~/Scripts/General/Validate/Grid.js")
+    
 
 
     <!--App Scripts widgets-->
