--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
@@ -52,8 +52,8 @@
     </div>
     @*GRID*@
     <div class="row addedSectionInLine">
-        <div class="button-section col-sm-12 col-md-2 col-lg-2">
-            <button id="AgregarWPS" type="button" class="btn btn-newArrival btn-yellow"><span id="WPSButtonNuevoWPS"></span></button>
+        <div class="col-sm-12 col-md-2 col-lg-2">
+            <a id="AgregarWPS" href="@Url.Action("crearWPS","WPS")" type="button" class="btn btn-newArrival btn-yellow"><span id="WPSButtonNuevoWPS"></span></a>
         </div>
         <div id="ContenedorGrid" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div id="grid" data-role="grid" class="k-grid k-widget">
