Vista para agregar PQRs

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
@@ -61,7 +61,7 @@
             <div class="row">
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRNombreDiv">
                     <label id="lblPQRNombre"> </label>
-                    <input type="text" id="NombreId" class="k-input" />
+                    <input type="text" id="NombreId" class="form-control general-input" />
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRPreheatDiv">
                     <label id="lblPQRPREHEAT"></label>
@@ -76,11 +76,11 @@
             <div class="row">
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQREspesoRellenorDiV">
                     <label id="lblPQREspesorRelleno"></label>
-                    <input type="text" id="EspesorRelleno" class="k-input" />
+                    <input type="text" id="EspesorRelleno" class="form-control general-input" />
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQREspesorRaizDiV">
                     <label id="lblPQREspesorRaiz"></label>
-                    <input type="text" id="EspesorRaiz" class="k-input" />
+                    <input type="text" id="EspesorRaiz" class="form-control general-input" />
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRProcesoSoldaduraRellenoDiv">
                     <label id="lblPQRProcesoSoldaduraRelleno"></label>
@@ -94,7 +94,7 @@
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRNumeroPDiv">
                     <label id="lblPQRNumeroP"></label>
-                    <input id="NumeroPID" class="" />
+                    <input id="NumeroPID" class="form-control general-input" />
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRGrupoPMaterialBase1Div">
                     <label id="lblPQRGrupoPMaterialBase1"></label>
@@ -110,22 +110,22 @@
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRAporteDiv">
                     <label id="lblPQRAporte"></label>
-                    <input id="AporteID" class="" />
+                    <input id="AporteID" class="form-control general-input" />
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRMezclaDiv">
                     <label id="lblPQRMezcla"></label>
-                    <input id="MezclaID" class="" />
+                    <input id="MezclaID" class="form-control general-input" />
                 </div>
 
             </div>
             <div class="row">
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRRespaldoDiv">
                     <label id="lblPQRRespaldo"></label>
-                    <input id="RespaldoID" class="" />
+                    <input id="RespaldoID" class="form-control general-input" />
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRGrupoFDiv">
                     <label id="lblPQRGrupoF"></label>
-                    <input id="GrupoFID" class="" />
+                    <input id="GrupoFID" class="form-control general-input" />
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRCodigoDiv">
                     <label id="lblPQRCodigo"></label>
@@ -151,9 +151,9 @@
 
 </div>
 
-@*<script src="~/Scripts/AppComponents/Catalogos/PQR/PopUpAjax.js"></script>
-    <script src="~/Scripts/AppComponents/Catalogos/PQR/PopUpHandlers.js"></script>
-    <script src="~/Scripts/AppComponents/Catalogos/PQR/PopUpPQR.js"></script>*@
+
+<script src="~/Scripts/AppComponents/Catalogos/PQR/CrearPQR/Ajax.js"></script>
+<script src="~/Scripts/AppComponents/Catalogos/PQR/CrearPQR/CrearPQR.js"></script>
 
 <script>
     @section JavascriptDocumentReadyFunctions {
