Linkeo de vista de agregado con vista de consulta para PQR

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
@@ -54,7 +54,7 @@
 
     <div class="row addedSectionInLine">
         <div class="button-section col-sm-12 col-md-2 col-lg-2">
-            <button id="AAgregarPQR" type="button" class="btn btn-newArrival btn-yellow"><span id="DashboardAvisoLlegada0003"></span></button>
+            <a id="AAgregarPQR" href="@Url.Action("CrearPQR","PQR")" type="button" class="btn btn-newArrival btn-yellow"><span id="DashboardAvisoLlegada0003"></span></a>
         </div>
         <div id="ContenedorGridPopUp" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div id="grid" data-role="grid" class="k-grid k-widget">
