--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
@@ -24,7 +24,6 @@
                 <div class="button-section editButtonSection">
                     <div class="btn-group save-group">
                         <button id="Guardar" onclick="javascript:void(0);" type="button" class="btn btn-yellow accionGuardar"><span id="botonGuardar"></span></button>
-                        
                     </div>
                     <a id="btnCancelar" class="btn btn-black"><span id="botonCancelar"></span></a>
                 </div>
@@ -40,14 +39,14 @@
                         <ul class="dropdown-menu" aria-labelledby="Acciones"></ul>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
     @*FORMULARIO WPS*@
     <div class="row" id="FieldSetView">
         <div class="row">
-            
+
             <div id="ValidaCamposRequeridosWPS" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 form-group">
                 <label id="WPSNombre"></label>
                 <input id="NomnreWPS" class="form-control general-input" />
@@ -56,70 +55,109 @@
                 <label id="WPSProyecto"></label>
                 <input id="Proyecto" class="" />
             </div>
+
         </div>
         <div class="row">
-            
-            <div id="DivNombrePQRRaiz" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <label id="WPSPQR"></label>
-                <input id="PQRRaizNombre"/>
-            </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <label id="WPSPQRGrupoP"></label>
-                <input id="grupoPRaiz" readonly="readonly" class="general-input" />
-            </div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <label id="WPSEspesorMaximo"></label>
-                <label id="EspesorMaximoRaiz">0</label>
-            </div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <label id="WPSEspesorMinimo"></label>
-                <label id="EspesorMinimoRaiz">0</label>
-            </div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <label id="WPSPWHT"></label>
-                <input type="checkbox" id="PWHRaiz" data-bind="checked: optionCheck" readonly="readonly" checked onclick="javascript: return false;" />
-            </div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <label id="WPSPreHeat"></label>
-                <input type="checkbox" id="PREHEATRaiz" data-bind="checked: optionCheck" readonly="readonly" checked onclick="javascript: return false;" />
-            </div>
-            
+            <fieldset id="fieldSetRaiz">
+                <legend style="padding-left:10px;" id="legendRaiz">Raiz</legend>
+                <div id="DivNombrePQRRaiz" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <label id="WPSPQR"></label>
+                    <input id="PQRRaizNombre" />
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <label id="WPSPQRGrupoP"></label>
+                    <input id="grupoPRaiz" readonly="readonly" class="general-input" />
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <label id="WPSEspesorMaximo"></label>
+                    <label id="EspesorMaximoRaiz">0</label>
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <label id="WPSEspesorMinimo"></label>
+                    <label id="EspesorMinimoRaiz">0</label>
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <label id="WPSPWHT"></label>
+                    <input type="checkbox" id="PWHRaiz" data-bind="checked: optionCheck" readonly="readonly"  onclick="javascript: return false;" />
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <label id="WPSPreHeat"></label>
+                    <input type="checkbox" id="PREHEATRaiz" data-bind="checked: optionCheck" readonly="readonly"  onclick="javascript: return false;" />
+                </div>
+            </fieldset>
+
         </div>
         <div class="row">
-            
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <label id="">&nbsp;</label>
+            </div>
         </div>
         <div class="row">
-            
-            <div id="DivNombrePQRRelleno" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <label id="WPSPQR2"></label>
-                <input id="PQRRellenoNombre"/>
-            </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <label id="WPSPQRGrupoP2"></label>
-                <input id="grupoPRelleno" readonly="readonly" class="general-input" />
-            </div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <label id="WPSEspesorMaximo"></label>
-                <label id="EspesorMaximoRelleno">0</label>
-            </div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <label id="WPSEspesorMinimo"></label>
-                <label id="EspesorMinimoRelleno">0</label>
-            </div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <label id="WPSPWHT2"></label>
-                <input type="checkbox" id="PWHRelleno" data-bind="checked: optionCheck" readonly="readonly" checked onclick="javascript: return false;" />
-            </div>
-            <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                <label id="WPSPreHeat2"></label>
-                <input type="checkbox" id="PREHEATRelleno" data-bind="checked: optionCheck" readonly="readonly" checked onclick="javascript: return false;" />
-            </div>
-            
+            <fieldset id="fieldSetRelleno">
+                <legend style="padding-left:10px;" >Relleno</legend>
+
+                <div id="DivNombrePQRRelleno" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <label id="WPSPQR2"></label>
+                    <input id="PQRRellenoNombre" />
+                </div>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <label id="WPSPQRGrupoP2"></label>
+                    <input id="grupoPRelleno" readonly="readonly" class="general-input" />
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <label id="WPSEspesorMaximo"></label>
+                    <label id="EspesorMaximoRelleno">0</label>
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <label id="WPSEspesorMinimo"></label>
+                    <label id="EspesorMinimoRelleno">0</label>
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <label id="WPSPWHT2"></label>
+                    <input type="checkbox" id="PWHRelleno" data-bind="checked: optionCheck" readonly="readonly"  onclick="javascript: return false;" />
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                    <label id="WPSPreHeat2"></label>
+                    <input type="checkbox" id="PREHEATRelleno" data-bind="checked: optionCheck" readonly="readonly"  onclick="javascript: return false;" />
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <label id="">&nbsp;</label>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <label id="">&nbsp;</label>
+                </div>
+            </fieldset>
         </div>
-        
+
     </div>
-    
+
+    @*Menu Inferior*@
+    <div class="row">
+        <div class="col-xs-11 col-sm-12 col-md-12 col-lg-11">
+            <div class="formNav clearfix">
+                <div class="button-section editButtonSection">
+                    <div class="btn-group save-group">
+                        <button id="Guardar1" onclick="javascript:void(0);" type="button" class="btn btn-yellow accionGuardar"><span id="botonGuardar2"></span></button>
+                    </div>
+                    <a id="btnCancelar1" class="btn btn-black"><span id="botonCancelar1"></span></a>
+                </div>
+                <div id="ArmadoSoldaduraDivSuperior" class="button-section">
+                    <a id="ArmadoSoldaduraSuperior" href="@Url.Action("WPS","WPS")" class="btn btn-primary"><span id="menuWPS1"></span></a>
+                </div>
+                <div class="button-section actionButtonSection">
+                    <div class="dropdown action-group">
+                        <a id="Acciones" data-target="#" href="#" data-toggle="dropdown" role="button" ariahaspopup="true" aria-expanded="false" class="btn btn-default">
+                            <span id="botonAcciones2"></span>
+                            <span class="caretBlue"></span>
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="Acciones"></ul>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
+</div>
 
 <script src="~/Scripts/AppComponents/WPS/WPSCrear/Ajax.js"></script>
 <script src="~/Scripts/AppComponents/WPS/WPSCrear/Handlers.js"></script>
