Se completa la funcionalidad  para crear nuevos WPS

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/crearWPS.cshtml
@@ -51,10 +51,10 @@
                 <label id="WPSNombre"></label>
                 <input id="NomnreWPS" class="form-control general-input" />
             </div>
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 form-group">
+            @*<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 form-group">
                 <label id="WPSProyecto"></label>
                 <input id="Proyecto" class="" />
-            </div>
+            </div>*@
 
         </div>
         <div class="row">
