Guardado de uevo registro PQR

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
@@ -100,8 +100,6 @@
                     <label id="lblPQRGrupoPMaterialBase1"></label>
                     <input id="GrupoPMaterialBase1ID" class="" />
                 </div>
-
-
             </div>
             <div class="row">
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRGrupoPMaterialBase2Div">
@@ -172,6 +170,7 @@
 
 
 <script src="~/Scripts/AppComponents/Catalogos/PQR/CrearPQR/Ajax.js"></script>
+<script src="~/Scripts/AppComponents/Catalogos/PQR/CrearPQR/Handler.js"></script>
 <script src="~/Scripts/AppComponents/Catalogos/PQR/CrearPQR/CrearPQR.js"></script>
 
 <script>
