--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadoSoldadoresCertificacion.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/SoldadorCertificacion/ListadoSoldadoresCertificacion.cshtml
@@ -62,6 +62,16 @@
                 </div>
             </div>
         </div>
+        <div class="row" addedSectionInLine>
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <label>&nbsp;</label>
+            </div>
+        </div>
+        <div class="row" addedSectionInLine>
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <label>&nbsp;</label>
+            </div>
+        </div>
     </div>
 
     
