Validaciones para nuevos PQRs

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/CrearPQR.cshtml
@@ -76,11 +76,11 @@
             <div class="row">
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQREspesoRellenorDiV">
                     <label id="lblPQREspesorRelleno"></label>
-                    <input type="text" id="EspesorRelleno" class="form-control general-input" />
+                    <input type="text" id="EspesorRelleno" class="form-control" />
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQREspesorRaizDiV">
                     <label id="lblPQREspesorRaiz"></label>
-                    <input type="text" id="EspesorRaiz" class="form-control general-input" />
+                    <input type="text" id="EspesorRaiz" class="form-control" />
                 </div>
                 <div class=" col-sm-6 col-md-6 col-lg-4" id="PQRProcesoSoldaduraRellenoDiv">
                     <label id="lblPQRProcesoSoldaduraRelleno"></label>
