Cambios en WPS y boton en PQR

--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/PQR/PQR.cshtml
@@ -52,6 +52,9 @@
     </div>
     @*FORMULARIO PQR*@
     <div class="row addedSectionInLine">
+        <div class="col-sm-10 col-md-10 col-lg-10">
+            <label>&nbsp;</label>
+        </div>
         <div class="button-section col-sm-12 col-md-2 col-lg-2">
             <a id="AAgregarPQR" href="@Url.Action("CrearPQR","PQR")" type="button" class="btn btn-newArrival btn-yellow"><span id="DashboardAvisoLlegada0003"></span></a>
         </div>
