--- a/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
+++ b/SteelgoWebAppSolutions/FrontEndSAM/Views/WPS/WPS.cshtml
@@ -52,6 +52,9 @@
     </div>
     @*GRID*@
     <div class="row addedSectionInLine">
+        <div class="col-sm-10 col-md-10 col-lg-10">
+            <label>&nbsp;</label>
+        </div>
         <div class="col-sm-12 col-md-2 col-lg-2">
             <a id="AgregarWPS" href="@Url.Action("crearWPS","WPS")" type="button" class="btn btn-newArrival btn-yellow"><span id="WPSButtonNuevoWPS"></span></a>
         </div>
